[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.0"
ic-cdk-macros = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
sui-sdk = "0.0.0"
walrus-storage-node-client = { path = "../walrus/crates/walrus-storage-node-client" }


[dev-dependencies]
pocket-ic = "7.0.0"

[workspace]
members = [
    "../../crates/walrus-storage-node-client",
    # ... other workspace members ...
]
edition = "2021"
